# Phish-Phryer

./: .env  Dockerfile  README.md  XPATHer.py  docker-compose.yml  main.py  pyproject.toml
docker/: config_reader.py  docker.config  docker_run.sh
docker/index/: credential_manager.py  index.html  login.html
phish-phryer/: __main__.py
phryer/: __main__.py  cli.py
phryer/actions/dummy/: cli.py
phryer/actions/screenshot/: cli.py  controller.py
sandbox/: Dockerfile  README.md
webserver/: Dockerfile  index.html
