[tool.poetry]
name = "phish-phryer"
version = "1.0.0"
description = ""
authors = ["hullabrian"]
readme = "README.md"
packages = [{include = "phish_phryer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
