[tool.poetry]
name = "phish-phryer"
version = "1.0.0"
description = ""
authors = ["hullabrian"]
readme = "README.md"
# packages = [{include = "phish_phryer"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
loguru = "^0.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
requests = {extras = ["socks"], version = "^2.31.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
